# apex

control/7015_primary_eth1_only/: 7015_primary_axi_eth1.xsa  7015_primary_eth1_only.xpr
control/apex_7z015/: apex_7z015.xpr
control/apex_control_2015/: apex_control_2015.xpr  apex_control_bd_wrapper.hdf
control/apex_control_comb/: apex_control_comb.xpr  apex_control_comb.xsa  design_1_wrapper.xsa
control/apex_control_eth1_dma/: apex_control_eth1_dma.xpr  apex_control_eth1_dma.xsa  apex_control_eth1_dma_irq.xsa
control/apex_control_eth1_fifo/: apex_control_eth1_fifo.xpr  apex_control_eth1_fifo.xsa
control/apex_control_mgt/: README.md  README.txt  apex_control_mgt.xpr  apex_control_mgt_3p125g.xsa  apex_control_mgt_top.xsa
control/apex_control_uec7/: apex_control_uec7.xpr
control/apex_kria/: apex_kria.xpr  apex_kria.xsa  archive_project_summary.txt
control/apex_kria_port/: apex_control_mgt_top.xsa  apex_kria.xsa  apex_kria_port.tcl  apex_kria_port.xpr
control/soft/: IPMC_new_exec  IPMC_test  apex_control_mgt_top.bit  apex_firmware_commands.txt  aurora_reset.sh  bzip2-1.0.6-13.el7.armv7hl.rpm  c2c_reset.sh  devreg.sh  dis_ipmc.sh  en_ipmc.sh  (+12 more)
control/soft/UF_IPMC/SRC/: CMakeCache.txt  CMakeLists.txt  IPMC_EXEC  Makefile  cmake_install.cmake  debug.c  debug.h  error.h  event.c  event.h  fan.c  fan.h  i2c-sensor.c  i2c-sensor.h  i2c.c  i2c.h  ipmc.c  ipmc.h  ipmi.c  ipmi.h  logger.c  logger.h  main.c  mutex.c  picmg.c  picmg.h  semaphore.c  semaphore.h  sensor.c  sensor.h  strings.c  strings.h  timer.c  timer.h  user-sensor.c  user-sensor.h  ws.c  ws.h
(+3314 files in other folders)
